--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,8 @@ dependencies:
   provider: ^6.0.0
   firebase_core: ^2.14.0
   firebase_auth: ^4.6.3
+  cloud_firestore: ^4.8.2
+  scroll_snap_list:
 
 dev_dependencies:
   flutter_test:
@@ -23,6 +25,9 @@ dev_dependencies:
 
   flutter_lints: ^2.0.0
   flutter_native_splash: ^2.0.1+1
+  provider:
+  smooth_page_indicator: ^1.0.0
+  equatable:
 
 flutter:
   uses-material-design: true
