--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleDisplayName</key>
-	<string>Flutter App</string>
+	<string>CoStudy</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
@@ -47,5 +47,12 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	    <key>NSPhotoLibraryUsageDescription</key>
+	    <string>Photo Library usage</string>
+	    <key>NSCameraUsageDescription</key>
+        <string>Camera usage</string>
+        <key>NSMicrophoneUsageDescription</key>
+        <string>Microphone usage</string>
+
 </dict>
 </plist>
