--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,14 @@ dependencies:
   firebase_core: ^2.14.0
   firebase_auth: ^4.6.3
   cloud_firestore: ^4.8.2
-  scroll_snap_list:
+  scroll_snap_list: ^0.9.1
+  sliding_up_panel: ^2.0.0+1
+  intl: ^0.17.0
+  image_picker: ^1.0.1
+  firebase_storage: ^11.2.5
+  permission_handler: ^10.4.3
+  flutter_launcher_icons: ^0.13.1
+  photo_view: ^0.14.0
 
 dev_dependencies:
   flutter_test:
@@ -25,7 +32,6 @@ dev_dependencies:
 
   flutter_lints: ^2.0.0
   flutter_native_splash: ^2.0.1+1
-  provider:
   smooth_page_indicator: ^1.0.0
   equatable:
 
@@ -50,4 +56,7 @@ flutter:
         - asset: fonts/NunitoSans_7pt-Bold.ttf
           weight: 700
 
-
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "asset/Logo.png"
